<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.instruction.InstructionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instruction_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient_135"
        android:paddingLeft="@dimen/fragment_horizontal_padding"
        android:paddingTop="@dimen/fragment_vertical_padding"
        android:paddingRight="@dimen/fragment_horizontal_padding"
        android:paddingBottom="@dimen/fragment_vertical_padding">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_banner_foreground" />

        <TextView
            android:id="@+id/instruction_text_1"
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:text="@string/instruction_text_1"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/instruction_text_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/instruction_text_2"
            style="@style/instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:text="@string/instruction_text_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/instruction_button"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_text_2"
            app:layout_constraintVertical_bias="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>